[package]
name = "dev-utils"
version = "0.1.0"
description = "Utils for developers"
authors = ["you"]
license = ""
repository = ""
default-run = "dev-utils"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.12", features = [] }

[dependencies]
serde_json = "1.0.107"
serde = { version = "1.0.192", features = ["derive"] }
tauri = { version = "2.0.0-alpha.18", features = [ "tray-icon", "protocol-asset"] }
tauri-plugin-shell = "2.0.0-alpha.5"
tauri-plugin-dialog = "2.0.0-alpha.5"
tauri-runtime = "1.0.0-alpha.5"
tauri-plugin-fs = "2.0.0-alpha.5"
tauri-plugin-clipboard-manager = "2.0.0-alpha.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[lib]
name = "dev_utils"
crate-type = ["staticlib", "cdylib", "rlib"]
